added input container, box and button for entering word. set click event to show input container. more css styling

--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
 </head>
 <body>
     <h1>not Hangman</h1>
-    <button id="playGame">Play Now</button>
+    <div id="enterWord-container">
+        <h2>Enter a word:</h2>
+        <input type="text" id="theWord">
+        <button id="enterWord">Ready!</button>
+    </div>
+    <main>
+        <div id="word-container">
+
+        </div>
+    </main>
+    <button id="playNow">Play Now</button>
     <footer>
-        <div class="letters">
+        <div id="letters">
             <div class="letter">A</div>
             <div class="letter">B</div>
             <div class="letter">C</div>
