added function to split inputted words and display in #wordInPlay container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </div>
     <main>
         <div id="word-container">
-
+            <div id="wordInPlay">
+                
+            </div>
         </div>
     </main>
     <button id="playNow">Play Now</button>
