--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     <main>
         <div id="word-container">
             <div id="wordInPlay">
-                
+
             </div>
         </div>
     </main>
+    <div id="playBtn-container">
     <button id="playNow">Play Now</button>
-    <footer>
+    </div>
         <div id="letters">
             <div class="letter">A</div>
             <div class="letter">B</div>
@@ -57,6 +58,6 @@
 
 
         </div>
-    </footer>
+
 </body>
 </html>
