added click events to reveal letters. minor tweaks.

--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
     <button id="playNow">Play Now</button>
     </div>
         <div id="letters">
-            <div class="letter">A</div>
-            <div class="letter">B</div>
-            <div class="letter">C</div>
-            <div class="letter">D</div>
-            <div class="letter">E</div>
-            <div class="letter">F</div>
-            <div class="letter">G</div>
-            <div class="letter">H</div>
-            <div class="letter">I</div>
-            <div class="letter">J</div>
-            <div class="letter">K</div>
-            <div class="letter">L</div>
-            <div class="letter">M</div>
-            <div class="letter">N</div>
-            <div class="letter">O</div>
-            <div class="letter">P</div>
-            <div class="letter">Q</div>
-            <div class="letter">R</div>
-            <div class="letter">S</div>
-            <div class="letter">T</div>
-            <div class="letter">U</div>
-            <div class="letter">V</div>
-            <div class="letter">W</div>
-            <div class="letter">X</div>
-            <div class="letter">Y</div>
-            <div class="letter">Z</div>
+            <div class="A letter">A</div>
+            <div class="B letter">B</div>
+            <div class="C letter">C</div>
+            <div class="D letter">D</div>
+            <div class="E letter">E</div>
+            <div class="F letter">F</div>
+            <div class="G letter">G</div>
+            <div class="H letter">H</div>
+            <div class="I letter">I</div>
+            <div class="J letter">J</div>
+            <div class="K letter">K</div>
+            <div class="L letter">L</div>
+            <div class="M letter">M</div>
+            <div class="N letter">N</div>
+            <div class="O letter">O</div>
+            <div class="P letter">P</div>
+            <div class="Q letter">Q</div>
+            <div class="R letter">R</div>
+            <div class="S letter">S</div>
+            <div class="T letter">T</div>
+            <div class="U letter">U</div>
+            <div class="V letter">V</div>
+            <div class="W letter">W</div>
+            <div class="X letter">X</div>
+            <div class="Y letter">Y</div>
+            <div class="Z letter">Z</div>
 
 
         </div>
