added functionality to confirm if letter choice is correct. made code DRYer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <h1>not Hangman</h1>
     <div id="enterWord-container">
-        <h2>Enter a word:</h2>
-        <input type="text" id="theWord">
-        <button id="enterWord">Ready!</button>
+        <h2>Enter a word or phrase:</h2>
+        <input type="text" id="theWord-input">
+        <button id="enterWord-button">Ready!</button>
     </div>
     <main>
         <div id="word-container">
@@ -26,7 +26,7 @@
         </div>
     </main>
     <div id="playBtn-container">
-    <button id="playNow">Play Now</button>
+    <button id="playNow-button">Play Now</button>
     </div>
         <div id="letters">
             <div class="A letter">A</div>
