set to display player scores and health

--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
             <div class="X letter">X</div>
             <div class="Y letter">Y</div>
             <div class="Z letter">Z</div>
-
-
         </div>
-
+    <div id="player-Stats">
+        <div id="health-display"></div>
+        <div id="scores">
+            <div id="p1-score"></div>
+            <div id="p2-score"></div>
+        </div>
+    </div>
 </body>
 </html>
