added ability to name players, and set gameplay to reference players by name throughout

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <h1>not Hangman</h1>
     <div id="enterWord-container">
-        <h2>Enter a word or phrase:</h2>
-        <input type="text" id="theWord-input">
+        <h2 id="enterWord-h2"></h2>
+        <input type="text" id="theWord-input" autofocus>
         <button id="enterWord-button">Ready!</button>
     </div>
     <main>
@@ -27,6 +27,11 @@
     </main>
     <div id="playBtn-container">
     <button id="playNow-button">Play Now</button>
+    </div>
+    <div id="playerName-container">
+        <h2 id="enterName-h2"></h2>
+        <input type="text" id="name-input">
+        <button id="name-button">That's Me!</button>
     </div>
         <div id="letters">
             <div class="A letter">A</div>
