converted alerts to DOM windows

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <input type="text" id="name-input">
         <button id="name-button">That's Me!</button>
     </div>
+    <div id="alert-window">
+        <h2 id="alert-h2"></h2>
+        <button id="alert-button">Okay</button>
+    </div>
         <div id="letters">
             <div class="A letter">A</div>
             <div class="B letter">B</div>
