--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <div id="player-Stats">
         <div id="health-display"></div>
         <div id="scores">
+            <h2 id="score-h2">Keeping Score</h2>
             <div id="p1-score"></div>
             <div id="p2-score"></div>
         </div>
