tweaked alignment of words in word container and added display for current round and active player

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     <main>
         <div id="word-container">
+            <div id="round-status"></div>
             <div id="wordInPlay">
 
             </div>
