--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <div id="playBtn-container">
     <button id="playNow-button">Play Now</button>
     </div>
+    <div id="howTo-container">
+        <button id="howTo-button">Wait...How Do I Play?</button>
+        <p id="play-instructions">This is a two player game with two rounds. In each round, both players get a turn to guess a word or phrase and also create a word or phrase for their opponent to guess. <br><br>Points are scored to active player or opponent based on correct or incorrect letter choices. A player can make five incorrect guesses before losing a puzzle. Solving a puzzle gives the solver 200 points, while losing that puzzle gives the opponent 200 points. After two rounds the player with the highest score is determined as the winner.</p>
+    </div>
     <div id="playerName-container">
         <h2 id="enterName-h2"></h2>
         <input type="text" id="name-input">
