--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </div>
     <div id="howTo-container">
         <button id="howTo-button">Wait...How Do I Play?</button>
+    </div>
+    <div id="instructions-container">
         <p id="play-instructions">This is a two player game with two rounds. In each round, both players get a turn to guess a word or phrase and also create a word or phrase for their opponent to guess. <br><br>Points are scored to active player or opponent based on correct or incorrect letter choices. A player can make five incorrect guesses before losing a puzzle. Solving a puzzle gives the solver 200 points, while losing that puzzle gives the opponent 200 points. After two rounds the player with the highest score is determined as the winner.</p>
     </div>
     <div id="playerName-container">
@@ -80,5 +82,6 @@
             <div id="p2-score"></div>
         </div>
     </div>
+    <p id=credit>Created by Mike Hood, 2020</p>
 </body>
 </html>
