fixed bugs: #letters being clickable more than once. .letter hover settings not carrying over after first round

--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
             <div class="Z letter">Z</div>
         </div>
     <div id="player-Stats">
-        <div id="health-display"></div>
+        <div id="health-display">
+                <span class="dot"> </span>
+                <span class="dot"> </span>
+                <span class="dot"> </span>
+                <span class="dot"> </span>
+        </div>
         <div id="scores">
             <h2 id="score-h2">Keeping Score</h2>
             <div id="p1-score"></div>
