bug fix: clear name input before new game. other minor css adjustments

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>not Hangman</h1>
     <div id="enterWord-container">
         <h2 id="enterWord-h2"></h2>
-        <input type="text" id="theWord-input" autofocus>
+        <input type="password" id="theWord-input" autofocus>
         <button id="enterWord-button">Ready!</button>
     </div>
     <main>
