--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:image" content="/images/GamePlay1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>not Hangman</title>
     <link href="style.css" rel="stylesheet">
